--- a/index.html
+++ b/index.html
@@ -6,11 +6,118 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>developer portpolio</title>
+  <!-- css style link -->
   <link rel="stylesheet" href="styles/portpolio.css">
+  <!-- fonts link -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@500&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-  <h1>hi, i am osman hossen</h1>
+  <header>
+    <nav>
+      <h2 class="nav-title">Osm<span class="text-primary">a</span>n</h2>
+      <ul>
+        <li>Portfolio</li>
+        <li>Blog</li>
+        <li><button class="btn_primary">Hire Me</button></li>
+      </ul>
+    </nav>
+    <!-- banner area -->
+    <div class="banner">
+      <div class="">
+        <h5 class="banner-sub-title">Hi, I am </h5>
+        <h2 class="banner-title">Osman Hossen</h2>
+        <p class="banner_description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning
+          because as to society behaved
+          moments.</p>
+        <button class="btn_primary">Dounload CV</button> <button>Contact</button>
+      </div>
+      <div class="banner_img">
+        <img src="images/hardy.png" alt="">
+      </div>
+    </div>
+  </header>
+  <main>
+    <section class="about">
+      <h2 class="section_title">About Me</h2>
+      <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing
+        simple, clean and slick websites
+        that
+        provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with
+        me.
+        Delivering work within time and budget which meets clients requirements in our mata.</p>
+      <div class="about-info-container">
+        <div class="about-info">
+          <p class="info-title">Name:</p>
+          <p class="info-description">Osman Hossen</p>
+        </div>
+        <div class="about-info">
+          <p class="info-title">Email:</p>
+          <p class="info-description">Osmanhossen818@gmail.com</p>
+        </div>
+        <div class="about-info">
+          <p class="info-title">Date of birth:</p>
+          <p class="info-description">09 July 1997</p>
+        </div>
+        <div class="about-info">
+          <p class="info-title">From:</p>
+          <p class="info-description">Abu Dhabi, UAE</p>
+        </div>
+      </div>
+    </section>
+    <!------------------------about section finished------------------------->
+
+    <!-- what-i-do container started -->
+    <section class="what-i-do">
+      <h3 class="section_title">What I do</h3>
+      <p class="section-description">I have more than 10 years experience building software for clients all over the
+        world. Below is a quick
+        overview of my
+        main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online
+        resume
+        and project portfolio.</p>
+
+      <div class="skills-container">
+        <div class="skill">
+          <img src="/images/icons/js.png" alt="">
+          <h4 class="skill-title">Vanilla JavaScript</h4>
+          <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+
+            FontAwesome 5 free icons available.
+            Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skill">
+          <img src="/images/icons/react.png" alt="">
+          <h4 class="skill-title">React</h4>
+          <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+
+            FontAwesome 5 free icons available.
+            Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skill">
+          <img src="/images/icons/nodejs.png" alt="">
+          <h4 class="skill-title">Node.js</h4>
+          <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+
+            FontAwesome 5 free icons available.
+            Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skill">
+          <img src="/images/icons/mongo.png" alt="">
+          <h4 class="skill-title">MongoDB</h4>
+          <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+
+            FontAwesome 5 free icons available.
+            Aenean commodo ligula eget dolor.</p>
+        </div>
+      </div>
+
+    </section>
+  </main>
+  <footer>
+
+  </footer>
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
 </body>
 
 </html>
