--- a/index.html
+++ b/index.html
@@ -112,11 +112,98 @@
       </div>
 
     </section>
-  </main>
-  <footer>
+    <section class="resume-section">
+      <h3 class="Resume_title">A summary of My Resume</h3>
+      <div class="resume_container">
+        <div class="expriences">
+          <div class="exprience">
+            <h2 class="exprience_title">My Education</h2>
+            <h3 class="study_title">Master in Computer Engineering</h3>
+            <h3 class="study_locatoin">Harvard University / 2015 - 2017</h3>
+            <p class="exprience_description">List skill/technologies here. You can change the icon above
+              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+          <hr>
+          <div class="exprience">
+            <h2 class="exprience_title">My Education</h2>
+            <h3 class="study_title">Master in Computer Engineering</h3>
+            <h3 class="study_locatoin">Harvard University / 2015 - 2017</h3>
+            <p class="exprience_description">List skill/technologies here. You can change the icon above
+              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+          <hr>
+          <div class="exprience">
+            <h2 class="exprience_title">My Education</h2>
+            <h3 class="study_title">Master in Computer Engineering</h3>
+            <h3 class="study_locatoin">Harvard University / 2015 - 2017</h3>
+            <p class="exprience_description">List skill/technologies here. You can change the icon above
+              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
 
+        </div>
+        <div class="expriences">
+          <div class="exprience">
+            <h2 class="exprience_title">My Education</h2>
+            <h3 class="study_title">Master in Computer Engineering</h3>
+            <h3 class="study_locatoin">Harvard University / 2015 - 2017</h3>
+            <p class="exprience_description">List skill/technologies here. You can change the icon above
+              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+          <hr>
+          <div class="exprience">
+            <h2 class="exprience_title">My Experience</h2>
+            <h3 class="study_title">Sr. Font End Developer</h3>
+            <h3 class="study_locatoin">Apple Inc / 2020 - Current</h3>
+            <p class="exprience_description">List skill/technologies here. You can change the icon above
+              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+          <hr>
+          <div class="exprience">
+            <h2 class="exprience_title">My Experience</h2>
+            <h3 class="study_title">Sr. Font End Developer</h3>
+            <h3 class="study_locatoin">Apple Inc / 2020 - Current</h3>
+            <p class="exprience_description">List skill/technologies here. You can change the icon above
+              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+
+        </div>
+
+      </div>
+      <div class="resume_btn">
+        <button class="btn_primary">DOUNLOAD CV</button>
+      </div>
+
+
+    </section>
+  </main>
+  <footer class="contact">
+    <div>
+      <h3 class="section_title">Lets Connect</h3>
+      <p class="contact-description">Please fill out the form on this section to contact with me or call between 9:00
+        A.M and 8.00 P.M ET, Monday
+        through
+        Friday.</p>
+      <a href="">
+        <img src="/images/icons/facebook.png" alt="">
+      </a>
+      <a href="">
+        <img src="/images/icons/insta.png" alt="">
+      </a>
+      <a href="">
+        <img src="/images/icons/twitter.png" alt="">
+      </a>
+    </div>
+    <div>
+      <h3 class="section_title">Let’s Message me</h3>
+      <form action="">
+        <input type="text" placeholder="Your Name"><br>
+        <input type="email" name="" id="" placeholder="Your Email"><br>
+        <textarea name="" id="" placeholder="m" cols="30" rows="10">
+        </textarea><br>
+        <input class="btn_primary" type="button" value="Button">
+      </form>
+    </div>
   </footer>
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 </body>
 
