font awesome added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>developer portpolio</title>
+  <!-- font awesome -->
+  <script src="https://kit.fontawesome.com/493c944716.js" crossorigin="anonymous"></script>
   <!-- css style link -->
   <link rel="stylesheet" href="styles/portpolio.css">
   <!-- fonts link -->
@@ -33,7 +35,8 @@
         <p class="banner_description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning
           because as to society behaved
           moments.</p>
-        <button class="btn_primary">Dounload CV</button> <button>Contact</button>
+        <button class="btn_primary"><i class="fa-solid fa-download"></i> Dounload CV</button> <button
+          class="btn-contact"><i class="fa-solid fa-phone"></i> Contact</button>
       </div>
       <div class="banner_img">
         <img src="images/hardy.png" alt="">
@@ -170,7 +173,7 @@
 
       </div>
       <div class="resume_btn">
-        <button class="btn_primary">DOUNLOAD CV</button>
+        <button class="btn_primary"><i class="fa-solid fa-download"></i> DOUNLOAD CV</button>
       </div>
 
 
@@ -184,13 +187,13 @@
         through
         Friday.</p>
       <a href="">
-        <img src="/images/icons/facebook.png" alt="">
+        <i class="fa-brands fa-facebook"></i>
       </a>
       <a href="">
-        <img src="/images/icons/insta.png" alt="">
+        <i class="fa-brands fa-instagram"></i>
       </a>
       <a href="">
-        <img src="/images/icons/twitter.png" alt="">
+      <i class="fa-brands fa-twitter"></i>
       </a>
     </div>
     <div>
