--- a/index.html
+++ b/index.html
@@ -178,34 +178,39 @@
 
 
     </section>
-  </main>
-  <footer class="contact">
-    <div>
-      <h3 class="section_title">Lets Connect</h3>
-      <p class="contact-description">Please fill out the form on this section to contact with me or call between 9:00
-        A.M and 8.00 P.M ET, Monday
-        through
-        Friday.</p>
-      <a href="">
-        <i class="fa-brands fa-facebook"></i>
-      </a>
-      <a href="">
-        <i class="fa-brands fa-instagram"></i>
-      </a>
-      <a href="">
-      <i class="fa-brands fa-twitter"></i>
-      </a>
-    </div>
-    <div>
-      <h3 class="section_title">Let’s Message me</h3>
-      <form action="">
-        <input type="text" placeholder="Your Name"><br>
-        <input type="email" name="" id="" placeholder="Your Email"><br>
-        <textarea name="" id="" placeholder="m" cols="30" rows="10">
+    <!-- contact section -->
+    <section class="contact">
+      <div>
+        <h3 class="section_title">Lets Connect</h3>
+        <p class="contact-description">Please fill out the form on this section to contact with me or call between 9:00
+          A.M and 8.00 P.M ET, Monday
+          through
+          Friday.</p>
+        <a href="">
+          <i class="fa-brands fa-facebook"></i>
+        </a>
+        <a href="">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="">
+          <i class="fa-brands fa-twitter"></i>
+        </a>
+      </div>
+      <div>
+        <h3 class="section_title">Let’s Message me</h3>
+        <form action="">
+          <input type="text" placeholder="Your Name"><br>
+          <input type="email" name="" id="" placeholder="Your Email"><br>
+          <textarea name="" id="" placeholder="m" cols="30" rows="10">
         </textarea><br>
-        <input class="btn_primary" type="button" value="Button">
-      </form>
-    </div>
+          <input class="btn_primary" type="button" value="Button">
+        </form>
+      </div>
+    </section>
+  </main>
+  <footer>
+
+    <p>&copy; CopyRight 2023 | Designed By Osman Hossen</p>
   </footer>
 
 </body>
